# Matrix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  matrix.hpp  out
include/: container.hpp  container_iterator.hpp  contiguous_iterator.hpp  matrix_arithmetic.hpp  matrix_container.hpp
matrix/: CMakeLists.txt  matrix.hpp  matrix_arithmetic.hpp  matrix_container.hpp
old_unit_tests/: test.cpp
task/: CMakeLists.txt  matrix.cpp
test/: CMakeLists.txt  det_test.py  test.cpp  test1_det  test1_mat  testgen.py
test/mats/: mat1_det  mat1_mat  mat2_mat  mat3_det  mat3_mat  test1_det  test1_mat
unit_tests/: CMakeLists.txt  test.cpp
